--- a/frontend/src/gameplay/game-controls/stacked-dashboard/stacked-dashboard.module.css
+++ b/frontend/src/gameplay/game-controls/stacked-dashboard/stacked-dashboard.module.css
@@ -31,7 +31,7 @@
   padding: 36px 20px 20px;
   justify-content: space-evenly;
   overflow-y: auto;
-  overflow-x: clip;
+  overflow-x: hidden;
   scrollbar-width: thin;
   scrollbar-color: var(--bg-scrollbar) transparent;
 }
